--- a/less/trends.less
+++ b/less/trends.less
@@ -1,150 +1,147 @@
+// HTML Styles
+
 body, html {
-    height:100%;
+    height: 100%;
 }
+
 body, html, ul, li, h1, h2, h3, h4, h5, p {
     margin: 0;
     padding: 0;
 }
+
 body {
-    font-size:16pt;
+    color: #fff;
+    font-size: 20px;
     font-family: Roboto, Arial, sans-serif;
     font-weight: 300;
-    text-align:center;
-    background-color:#555;
+    text-align: center;
+    background-color:#eee;
 }
-h1 {
-    color: #fff;
-    font-size: 16pt;
-    font-family: Roboto, Arial, sans-serif;
-    font-weight: 400;
-}
-p {
-    color: #fff;
-    font-size: 12pt;
-    font-family: Roboto, Arial, sans-serif;
-    font-weight: 300;
-}
+
 a {
-    color:#aaa;
-    text-decoration: none;
+    color: #bbb;
+    text-decoration: underline;
+    .color-transition;
+    &:hover {
+        color: #fff;
+        text-decoration: underline;
+    }
+}
+
+// Scaffolding Styles
+
+.header, .footer {
+    font-size: 20px;
+    font-weight: 100;
+    box-shadow: 0px 0px 5px #000;
+    background-color: #555;
+    text-shadow: 1px 1px 3px #000;
+}
+
+.header {
+    font-size: 50px;
+    padding: 10px 0px 25px 10px;
+    text-shadow: 0px 0px 10px #000;
+    border-bottom: 1px solid #999;
+    margin-bottom: 10px;
+}
+
+.footer {
+    padding: 25px 0px 10px 10px;
+    border-top: 1px solid #999;
+    margin-top: 10px;
+}
+
+.content {
+    margin: auto;
+    max-width: 880px;
+
+    // Flex Code for trend boxes
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
+
+}
+
+// Trend Styles
+
+.trend {
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    font-size: 0;
+    border-collapse: collapse;
+    text-shadow: 1px 1px 3px #000;
+    text-transform: lowercase;
+    position: relative;
+    //float:left;
+    -webkit-perspective: 600px;
+       -moz-perspective: 600px;
+            perspective: 600px;
+    .front, .back {
+
+        // Flex code for vertical alignment
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-direction: column;
+
+        font-size: 20px;
+        position: absolute;
+        top:0;
+        width: inherit;
+        height: inherit;
+        border-radius: 3px;
+        box-shadow: 1px 1px 5px #bbb;
+    }
+    .front {
+        //line-height: 100px;
+        .flip-effect(rotateY(0deg), preserve-3d, hidden, all .4s ease-in-out);
+        .marked {
+            position: absolute;
+            top: -6px;
+            left: 5px;
+            text-shadow: none;
+        }
+    }
+    .back {
+        background-color: #333;
+        .flip-effect(rotateY(-180deg), preserve-3d, hidden, all .4s ease-in-out);
+    }
+    &.flip {
+        .front {
+            .flip-effect(rotateY(180deg), preserve-3d, hidden, all .4s ease-in-out);
+        }
+        .back {
+            .flip-effect(rotateY(0deg), preserve-3d, hidden, all .4s ease-in-out);
+        }
+    }
+}
+
+// Mixins
+
+.flip-effect (@deg, @style, @visibility, @transition) {
+    -webkit-transform: @deg;
+    -moz-transform: @deg;
+    transform: @deg;
+    -webkit-transform-style: @style;
+    -moz-transform-style: @style;
+    transform-style: @style;
+    -webkit-backface-visibility: @visibility;
+    -moz-backface-visibility: @visibility;
+    backface-visibility: @visibility;
+    -webkit-transition: @transition;
+    transition: @transition;
+}
+
+.color-transition {
     -webkit-transition: color 0.5s ease-out;
     -moz-transition: color 0.5s ease-out;
     -ms-transition: color 0.5s ease-out;
     -o-transition: color 0.5s ease-out;
     transition: color 0.5s ease-out;
-}
-a:hover {
-    color: #fff;
-    text-decoration: none;
-}
-b {
-    font-family: Roboto, Arial, sans-serif;
-    font-weight: 700;
-}
-td {
-    padding:0px;
-    margin:0px;
-}
-.header {
-    color: #fff;
-    font-size: 36pt;
-    font-weight: 100;
-    padding:10px 0px 25px 10px;
-    text-shadow: 0px 0px 10px #000;
-}
-.content {
-    border-collapse:collapse;
-    margin:auto;
-}
-.footer {
-    color: #fff;
-    font-size: 20pt;
-    font-weight: 100;
-    padding:25px 0px 10px 10px;
-    text-shadow: 0px 0px 10px #000;
-}
-.trend-container {
-    padding: 0px;
-    margin: 0px;
-    display: inline-block;
-}
-.trend-front, .trend-back {
-    border-collapse: collapse;
-    padding:0px;
-    margin:0px;
-    width:200px;
-    height:200px;
-    border-radius: 3px;
-}
-.trend-back {
-    background-color:#333;
-}
-.trend-front td, .trend-back td {
-    padding:0px;
-    margin:0px;
-    color:#fff;
-    text-shadow:1px 1px 5px #000;
-    text-align: center;
-    text-transform: lowercase;
-    vertical-align: middle;
-}
-.panel {
-    width: 203px;
-    height: 197px;
-    position: relative;
-    -webkit-perspective: 600px;
-    -moz-perspective: 600px;
-    perspective: 600px;
-    .front {
-        float: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 900;
-        width: inherit;
-        height: inherit;
-        -webkit-transform: rotateX(0deg) rotateY(0deg);
-        -moz-transform: rotateX(0deg) rotateY(0deg);
-        transform: rotateX(0deg) rotateY(0deg);
-        -webkit-transform-style: preserve-3d;
-        -moz-transform-style: preserve-3d;
-        transform-style: preserve-3d;
-        -webkit-backface-visibility: hidden;
-        -moz-backface-visibility: hidden;
-        backface-visibility: hidden;
-        -webkit-transition: all .4s ease-in-out;
-        transition: all .4s ease-in-out;
-    }
-    .back {
-        float: none;
-        position: absolute;
-        z-index: 800;
-        width: inherit;
-        height: inherit;
-        -webkit-transform: rotateY(-180deg);
-        -moz-transform: rotateY(-179deg);
-        transform: rotateY(-179deg);
-        -webkit-transform-style: preserve-3d;
-        -moz-transform-style: preserve-3d;
-        transform-style: preserve-3d;
-        -webkit-backface-visibility: hidden;
-        -moz-backface-visibility: hidden;
-        backface-visibility: hidden;
-        -webkit-transition: all .4s ease-in-out;
-        transition: all .4s ease-in-out;
-    }
-}
-.panel.flip {
-    .front {
-        z-index: 900;
-        -webkit-transform: rotateY(180deg);
-        -moz-transform: rotateY(180deg);
-        transform: rotateY(180deg);
-    }
-    .back {
-        z-index: 1000;
-        -webkit-transform: rotateX(0deg) rotateY(0deg);
-        -moz-transform: rotateX(0deg) rotateY(0deg);
-        transform: rotateX(0deg) rotateY(0deg);
-    }
 }
