--- a/less/trends.less
+++ b/less/trends.less
@@ -15,7 +15,6 @@ body {
     font-size: 20px;
     font-family: Roboto, Arial, sans-serif;
     font-weight: 300;
-    text-align: center;
     background-color:#eee;
 }
 
@@ -60,17 +59,10 @@ a {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    -webkit-flex-flow: row wrap;
-    -moz-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
     flex-flow: row wrap;
-    -webkit-justify-content: space-around;
-    -moz-justify-content: space-around;
-    -ms-justify-content: space-around;
     justify-content: space-around;
     margin: auto;
     max-width: 880px;
-    text-align: center;
     @media(min-width:960px){
         max-width: 880px;
     }
@@ -85,93 +77,74 @@ a {
 // Trend Styles
 
 .trend {
-    width: 200px;
-    height: 200px;
-    margin: 10px;
+    width: 400px;
     font-size: 0;
     border-collapse: collapse;
-    text-shadow: 1px 1px 3px #000;
-    text-transform: lowercase;
+    // text-shadow: 1px 1px 3px #000;
     position: relative;
-    -webkit-perspective: 600px;
-    -moz-perspective: 600px;
     perspective: 600px;
+    margin-bottom: 20px;
+    border-top:5px solid;
+    .mdc-card {
+        background-color: white;
+    }
+
     @media(max-width:768px) {
         width:45%;
         height:150px;
     }
-    .front, .back {
+    .front {
         // Flex code for vertical alignment
-        display: -webkit-box;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
         display: flex;
-        -webkit-justify-content: center;
-        -moz-justify-content: center;
-        -ms-justify-content: center;
         justify-content: center;
-        -webkit-align-items: center;
-        -moz-align-items: center;
-        -ms-align-items: center;
         align-items: center;
         flex-direction: column;
 
         width:100%;
-        font-size: 30px;
+        font-size: 20px;
         position: absolute;
         top:0;
-        //width: inherit;
+        left:0;
+
         height: inherit;
+        
         border-radius: 3px;
         box-shadow: 1px 1px 5px #bbb;
-        padding:5px;
-    }
-    .front {
-        //line-height: 100px;
-        .flip-effect(rotateY(0deg), preserve-3d, hidden, all .4s ease-in-out);
+        color: black;
+        background-color: white;
         .marked {
             font-size: 40px;
             position: absolute;
-            top: -12px;
+            top: -10px;
             left: 7px;
-            text-shadow: 1px 1px 1px #777;
         }
     }
-    .back {
-        background-color: #333;
-        .flip-effect(rotateY(-180deg), preserve-3d, hidden, all .4s ease-in-out);
+    .flip-tab {
+        z-index:1;
+        cursor: pointer;
+        color: #999;
+        font-size: 20px;
+        position: absolute;
+        right:2px;
+        bottom:-12px;
+        transform: rotate(45deg);
     }
-    &.flip {
-        .front {
-            .flip-effect(rotateY(180deg), preserve-3d, hidden, all .4s ease-in-out);
+    &.flip-tab-pulse {
+        .flip-tab {
+            animation: pulse 1s infinite ease-in-out;
         }
-        .back {
-            .flip-effect(rotateY(0deg), preserve-3d, hidden, all .4s ease-in-out);
-        }
+    }
+    @keyframes pulse {
+        0% {transform: scale(1) rotate(45deg);}
+        50% {transform: scale(1.5) rotate(45deg);}
+        100% {transform: scale(1) rotate(45deg);}
     }
 }
 
 // Mixins
 
-.flip-effect (@deg, @style, @visibility, @transition) {
-    -webkit-transform: @deg;
-    -moz-transform: @deg;
-    transform: @deg;
-    -webkit-transform-style: @style;
-    -moz-transform-style: @style;
-    transform-style: @style;
-    -webkit-backface-visibility: @visibility;
-    -moz-backface-visibility: @visibility;
-    backface-visibility: @visibility;
-    -webkit-transition: @transition;
-    transition: @transition;
-}
-
 .color-transition {
-    -webkit-transition: color 0.5s ease-out;
-    -moz-transition: color 0.5s ease-out;
-    -ms-transition: color 0.5s ease-out;
-    -o-transition: color 0.5s ease-out;
     transition: color 0.5s ease-out;
 }
+
+
